Fixed padding and margin to correct the clip_list class of unordered list elements to wrap images properly

--- a/trunk/cocoon/css/style.css
+++ b/trunk/cocoon/css/style.css
@@ -334,6 +334,8 @@ dd {
  
  ul.clip_list {
      float: left;
+     padding: 0;
+     margin: 0 0 0 20px;
  }
  
  .clip_list li {
